# NexusCode

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .watchfilesrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  ORCHESTRATION_DESIGN.md  Procfile  README.md  SECURITY.md  doc.md  docker-compose.yml  orchestration_viz.jsx  pyproject.toml  railway-worker.toml  railway.toml  rca_workflow.yaml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
architecture/: README.md  agent-system.md  database-schema.md  how-to-use.md  indexing-pipeline.md  llm-providers.md  mcp-integration.md  overview.md  retrieval-pipeline.md  workflow-engine.md
doc/: Architectural Paradigms of Codebase Indexing and the Design of Dynamically Updating Context Systems.docx  Codebase_Intelligence_MCP_Plan.docx  INDEXING_FLOW.md  NexusCode_Platform_Overview.key  NexusCode_Vision_and_Presentation.md  README.md  agent-roles.md  api-reference.md  configuration.md  connecting-github.md  cross-repo-search.md  custom-skills.md  deployment.md  external-mcp-servers.md  getting-started.md  knowledge-graph.md  mcp-access.md  pdf-generation.md  search-and-ask.md  workflows.md
doc/releases/: 0.1.0.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: StepForm.jsx  WorkflowNode.jsx  YamlPanel.jsx
rules/: default.md
scripts/: deploy_check.py  full_index.py  init_db.py  migrate.py  simulate_webhook.py  test_feature_to_pr.py  test_query.py
skills/ask-codebase/: SKILL.md
skills/generate-pdf/: SKILL.md
skills/manage-repos/: SKILL.md
skills/plan-implementation/: SKILL.md
skills/plan-implementation/references/: REFERENCE.md
skills/search-codebase/: SKILL.md
skills/search-codebase/references/: mcp-tools.md
src/: config.py
src/agent/: artifact_store.py  enterprise_roles.py  langchain_tools.py  loop.py  mcp_bridge.py  prompt_templates.py  roles.py  rules.py  tool_executor.py  tool_schemas.py
src/api/: agent_roles.py  api_keys.py  app.py  ask.py  documents.py  evolution.py  graph.py  history.py  integrations.py  mcp_servers.py  middleware.py  plan.py  repos.py  skills.py  stats.py  workflows.py
src/ask/: __init__.py  ask_agent.py
src/events/: __init__.py  bus.py
src/evolution/: __init__.py  ab_testing.py  feedback.py  insights.py  jobs.py  param_tuner.py  reflection_cycle.py  telemetry.py  worldview_generator.py
src/github/: events.py  fetcher.py  webhook.py
src/graph/: __init__.py  builder.py  semantic_enricher.py
src/integrations/: dispatcher.py  registry.py
src/integrations/auth/: credential_store.py  oauth_manager.py
src/integrations/figma/: client.py  tools.py
src/integrations/github/: client.py  tools.py
src/integrations/jira/: client.py  tools.py
src/integrations/notion/: client.py  tools.py
src/integrations/slack/: client.py  tools.py
src/llm/: __init__.py  anthropic_provider.py  base.py  client.py  grok_provider.py  openai_provider.py  registry.py  tool_converter.py  types.py
src/local/: fetcher.py
src/mcp/: auth.py  server.py
src/observability/: __init__.py  evaluators.py
src/pipeline/: chunker.py  embedder.py  enricher.py  parser.py  pipeline.py  summarizer.py
src/planning/: __init__.py  claude_planner.py  retriever.py  schemas.py  verifier.py  web_researcher.py
src/retrieval/: assembler.py  call_graph.py  coverage.py  embed_cache.py  graph_expander.py  hyde.py  relevance.py  repo_router.py  reranker.py  searcher.py
src/skills/: __init__.py  loader.py
src/storage/: db.py  models.py
src/storage/migrations/: 001_init.sql  002_webhook_hook_id.sql  003_chat_history.sql  004_indices.sql  005_parent_chunks.sql  006_enriched_fts.sql  007_hnsw.sql  008_external_mcp_servers.sql  009_knowledge_graph.sql  009_local_repos.sql  010_mcp_transport.sql  011_workflows.sql  012_agent_roles.sql  013_generated_documents.sql  014_repo_summaries.sql  015_evolution_foundation.sql  016_mcp_server_types.sql  017_semantic_graph.sql  018_graph_indexes.sql  019_graph_checkpoints.sql  020_integration_credentials.sql
src/tools/: pdf_generator.py
src/ui/: dashboard.py  helpers.py
src/ui/_pages/: agent_roles.py  api_keys.py  ask.py  docs.py  evolution.py  history.py  knowledge_graph.py  mcp_servers.py  planning.py  repos.py  settings.py  tokens.py  webhook.py  workflow_traces.py  workflows.py
src/ui/pages/: repos.py  settings.py  webhook.py
src/utils/: logging.py  sanitize.py
src/workflows/: __init__.py  context.py  executor.py  graph_engine.py  graph_state.py  models.py  parser.py  registry.py
src/workflows/templates/: architecture_review.yaml  bug_investigation.yaml  feature_development.yaml  feature_to_pr.yaml
tests/: conftest.py  test_artifact_store.py  test_call_graph.py  test_chunker.py  test_claude_planner.py  test_enricher.py  test_health_detailed.py  test_llm_providers.py  test_mcp_server.py  test_parser_rust.py  test_pipeline.py  test_relevance_gate.py  test_stats.py  test_stats_endpoint.py  test_webhook.py  test_webhook_registration.py
tests/eval/: eval_retrieval.py
