[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nexuscode-server"
version = "0.1.0"
description = "Codebase Intelligence MCP Knowledge Server — a live, queryable index of GitHub repos exposed via the Model Context Protocol"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Shubham Agrawal", email = "shubham@example.com" }]
requires-python = ">=3.11"
keywords = ["mcp", "codebase-intelligence", "embeddings", "code-search", "llm", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/shubhamsWEB/nexusCode_server"
Repository = "https://github.com/shubhamsWEB/nexusCode_server"
Issues = "https://github.com/shubhamsWEB/nexusCode_server/issues"
Changelog = "https://github.com/shubhamsWEB/nexusCode_server/blob/main/CHANGELOG.md"

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function call in default argument (FastAPI pattern)
    "SIM108", # ternary operator — sometimes less readable
    "SIM102", # nested if — sometimes more readable
    "TC001",  # TYPE_CHECKING import refactor — too invasive for now
    "TC003",  # TYPE_CHECKING import refactor — too invasive for now
    "B905",   # zip() strict= — not required here
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]           # assert is fine in tests
"scripts/*" = ["T201", "E402"] # print is fine; sys.path manipulation requires late imports
"src/ui/*" = ["RUF001", "RUF002", "E402"]  # UI emoji/special chars are intentional; sys.path manipulation

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── Mypy (type checking) ──────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true   # many deps lack stubs
exclude = [
    "^.venv/",
    "^build/",
    "^dist/",
]

# Modules with complex third-party API types (Pydantic Settings, tree-sitter,
# Anthropic SDK overloads, SQLAlchemy async) that mypy cannot fully resolve.
# These are runtime-correct; we skip static checks to keep CI green.
[[tool.mypy.overrides]]
module = [
    "src.config",
    "src.pipeline.parser",
    "src.pipeline.pipeline",
    "src.planning.claude_planner",
    "src.storage.db",
    "src.retrieval.searcher",
    "src.pipeline.embedder",
]
ignore_errors = true

# ── Pytest ─────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require live services",
    "asyncio: marks tests as async (handled by pytest-asyncio)",
]
asyncio_mode = "auto"

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
omit = [
    "src/ui/*",          # Streamlit UI — difficult to unit-test
    "*/migrations/*",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
